# FFmpegTest

./: README.md
TestFFmpegApplication/: settings.gradle
TestFFmpegApplication/app/: build.gradle
TestFFmpegApplication/app/src/androidTest/java/com/example/testffmpegapplication/: ExampleInstrumentedTest.kt
TestFFmpegApplication/app/src/main/: AndroidManifest.xml
TestFFmpegApplication/app/src/main/cpp/: CMakeLists.txt  ffmpeg-test.cpp  native-lib.cpp
TestFFmpegApplication/app/src/main/cpp/include/libavutil/: ffversion.h
TestFFmpegApplication/app/src/main/java/com/example/testffmpegapplication/: MainActivity.kt
TestFFmpegApplication/app/src/main/res/layout/: activity_main.xml
TestFFmpegApplication/app/src/main/res/values/: strings.xml  themes.xml
TestFFmpegApplication/app/src/main/res/values-night/: themes.xml
TestFFmpegApplication/app/src/test/java/com/example/testffmpegapplication/: ExampleUnitTest.kt
TestFFmpegApplication/gradle/wrapper/: gradle-wrapper.properties
